add fileserver to show api spec
